# hacks

./: README.md
altnamegrabber/: README.md  main.go
certsort/: Cargo.toml  README.md
certsort/src/: main.rs
cveparse/: README.md  cveparse.py
httpgrep/: Cargo.toml  README.md
httpgrep/src/: main.rs
mass2nmap/: README.md  mass2nmap.py
